--- a/slave3/Vagrantfile
+++ b/slave3/Vagrantfile
@@ -23,6 +23,7 @@ Vagrant.configure(2) do |config|
   config.vm.provision :chef_solo do |chef|
 		chef.version = "12.3.0"
 		chef.cookbooks_path = '../cookbooks'
-		chef.add_recipe "dbsetup::slave1"
+		chef.add_recipe "dbsetup::slave"
+		chef.add_recipe "dbsetup::slave3"
   end
 end
